rename everything to make stupid go happy

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -7,4 +7,4 @@ RUN npm ci && npm run build
 
 FROM docker.io/library/nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
-LABEL org.opencontainers.image.source="https://github.com/TecharoHQ/anubis"
+LABEL org.opencontainers.image.source="https://github.com/vale981/anubis"
